# anon4reid

./: README.md  app.py  pyproject.toml  requirements.txt
Report/ANON4REID/: 000_Main.acn  000_Main.aux  000_Main.bbl  000_Main.bcf  000_Main.blg  000_Main.ist  000_Main.lof  000_Main.lol  000_Main.lot  000_Main.run.xml  000_Main.tex  000_Main.toc  001_Frontpage.tex  010_Introduction.tex  020_Background.tex  030_Methodology.tex  040_Implementation.tex  050_Results.tex  060_Discussion.tex  070_Conclusion.tex  100_Acronyms.tex  literature.bib
models/: id_attacker_meta.json
outputs/results/: results_privacy.json  results_utility.json
src/: anonymizer.py  baseline_osnet.py  blur_anonymizer.py  evaluate_privacy.py  evaluate_utility.py  generate_cpu_datasets.ipynb  generate_gan_dataset.py  generate_rad_dataset.ipynb  generate_sd_inpaint_dataset.ipynb  lama_inpaint.py  rad_pipeline.py  regenerate_blur_dataset.py  sd_inpaint.py  silhouette_anonymizer.py  test_anonymization.py  train_attacker.py
