[project]
name = "anon4reid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "controlnet-aux>=0.0.10",
    "diffusers>=0.37.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
]
