[project]
name = "anon4reid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "controlnet-aux>=0.0.10",
    "diffusers>=0.37.1",
    "flake8>=7.3.0",
    "gdown>=6.0.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "torchreid>=0.2.5",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "yacs>=0.1.8",
    "mediapipe>=0.10.21",
    "matplotlib>=3.10.0",
    "streamlit>=1.45.0",
    "plotly>=6.1.0",
    "python-pptx>=1.0.2",
]
